# MOBC-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  mnist.ipynb  pyproject.toml  result.txt  train.py
.dvc/: config
configs/: mobc-mlops.yaml
data/: X_test.csv.dvc  X_test.npy.dvc  X_train.csv.dvc  X_train.npy.dvc  checkpoint.dvc  mnist_cnn_tf.ckpt.data-00000-of-00001.dvc  mnist_cnn_tf.ckpt.index  mnist_cnn_tf.ckpt.index.dvc  x_test.npy.dvc  x_train.npy.dvc  y_test.csv.dvc  y_test.npy.dvc  y_train.csv.dvc  y_train.npy.dvc
misc/: make_data.ipynb  mnist.ipynb
mobc-mlops/: infer.py  test.py  train.py
mobc-mlops/outputs/2023-12-24/18-16-33/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-21-12/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-23-25/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-25-19/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-27-03/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-41-31/.hydra/: config.yaml  hydra.yaml
mobc-mlops/outputs/2023-12-24/18-47-19/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/18-51-33/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/19-07-55/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/19-10-06/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/19-11-11/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/19-15-25/.hydra/: config.yaml  hydra.yaml
mobc-mlops/outputs/2023-12-24/19-34-53/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-24/19-39-44/.hydra/: hydra.yaml
mobc-mlops/outputs/2023-12-25/03-18-33/.hydra/: hydra.yaml
mobc_mlops/: infer.py  train.py
mobc_mlops/outputs/2023-12-25/03-30-25/.hydra/: hydra.yaml
mobc_mlops/outputs/2023-12-25/03-39-45/.hydra/: config.yaml  hydra.yaml
mobc_mlops/outputs/2023-12-25/03-44-24/.hydra/: config.yaml  hydra.yaml
mobc_mlops/outputs/2023-12-25/03-44-56/.hydra/: config.yaml  hydra.yaml
mobc_mlops/outputs/2023-12-25/03-48-48/.hydra/: config.yaml  hydra.yaml
mobc_mlops/outputs/2023-12-25/03-52-25/.hydra/: config.yaml  hydra.yaml
models/: checkpoint  mnist_cnn_tf.ckpt.index
myhomework/: mnist.ipynb  train.py
mymnist/: infer.py  train.py
mymnist/outputs/2023-12-24/18-18-40/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-19-43/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-20-17/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-24-29/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-33-13/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-38-55/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-39-44/.hydra/: hydra.yaml
mymnist/outputs/2023-12-24/18-40-10/.hydra/: hydra.yaml
(+10 files in other folders)
