[tool.poetry]
name = "mobc-mlops"
version = "0.1.0"
description = "Homework - small pet project"
authors = ["Dmitry <sda@asperito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.15"
tensorflow-datasets = "^4.9.3"
notebook = "^7.0.6"
jupyter = "^1.0.0"
pre-commit = "^3.6.0"
fire = "^0.5.0"
dvc = "^3.33.3"
dvc-s3 = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6"


[tool.black]
line-length = 90
target-version = ["py39"]


[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2


[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"


[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]


[tool.nbqa.mutate]
black = 1
isort = 1
