[tool.poetry]
name = "mobc-mlops"
version = "0.1.0"
description = "Homework - small pet project"
authors = ["Dmitry <sda@asperito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "^2.12"
tensorflow-datasets = "^4.9.3"
dvc = "^3.33.3"
dvc-s3 = "^2.23.0"
fire = "^0.5.0"
dvc-gdrive = "^3.0.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2
